<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margem_padrao"
    android:background="@drawable/fundo"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/nome"
        android:textColorHint="#03B6E3"
        android:textColor="#03B6E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:hint="@string/Peso"
        android:textColorHint="#03B6E3"
        android:textColor="#03B6E3"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:hint="@string/altura"
        android:textColorHint="#03B6E3"
        android:textColor="#03B6E3"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <RadioGroup
        android:id="@+id/rgClassificacaoIdade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPeso">
        <RadioButton
            android:text="@string/adulto_lbl"
            android:layout_width="wrap_content"
            android:textColor="#03B6E3"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbAdulto">
        </RadioButton>

        <RadioButton
            android:id="@+id/rbIdoso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#03B6E3"
            android:layout_weight="2"
            android:text="@string/idoso_lbl"></RadioButton>
    </RadioGroup>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        android:id="@+id/btnEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgClassificacaoIdade">
    </Button>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="295dp"
        android:layout_height="122dp"
        android:text="@string/classificao"
        android:textColor="#03B6E3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnviar"
        app:layout_constraintVertical_bias="0.066" />

</androidx.constraintlayout.widget.ConstraintLayout>